syntax = "proto3";

package calculator;
option go_package="./Calculator/calculatorpb";

message Calculate {
    int32 first_num = 1;
    int32 second_num = 2;
}

message CalculateRequest {
    Calculate calculate = 1;
}

message CalculateResponse {
    int32 result = 1;
}
service CalculatorService{
    //Unary
    rpc Calculate(CalculateRequest) returns (CalculateResponse){};
}